changed colors to stone colors, added wikipedia api search

--- a/phase1.html
+++ b/phase1.html
@@ -24,7 +24,7 @@
 
 
     <div class="main"> <!-- Main Begin -->
-        <a href="phase1.html">Phase 1</a> // <a href="phase2.html">Phase 2</a>
+        <b><a href="phase1.html">Phase 1</a> // <a href="phase2.html">Phase 2</a></b>
         <!-- Title Container -->
         <div class="title" id="maintitle">Timeline</div>
         <!-- Sketch Container -->
@@ -35,8 +35,10 @@
           <b>Director:</b> Joe Johnston<br>
           <b>Review:</b> This is where the NYT API comes in</b>
           <br><br>
-          Wanna know more? You can search for the film, comic book series, or character you’re interested in. We recommend you try searching for <i>Captain America</i> or <i>Red Skull</i>.<br>
-          <b> This is where the wikipedia search option comes in </b>
+          Wanna know more? You can search for the film, comic book series, or character you’re interested in. We recommend you try searching for <i>Captain America</i> or <i>Red Skull</i>.<br><br>
+         <center><input class="form-control" id="search" placeholder="Search Wikipedia...">
+			<button class="button2-style" id="searchBtn" type="button" class="btn btn-default"> go</button></center>
+			<div id="searchResults"></div>
         </div>
         <!-- Position 1 End -->
 
@@ -46,7 +48,9 @@
         <b>Review:</b> This is where the NYT API comes in</b>
         <br><br>
         Wanna know more? You can search for the film, comic book series, or character you’re interested in. We recommend you try searching for <i>Captain Marvel</i> or <i>Nick Fury</i>.<br>
-        <b> This is where the wikipedia search option comes in </b>
+        <br><center><input class="form-control" id="search" placeholder="Search Wikipedia...">
+     <button class="button2-style" id="searchBtn" type="button" class="btn btn-default"> go</button></center>
+     <div id="searchResults"></div>
         </div>
         <!-- Position 2 End -->
 
@@ -56,7 +60,9 @@
         <b>Review:</b> This is where the NYT API comes in</b>
         <br><br>
         Wanna know more? You can search for the film, comic book series, or character you’re interested in. We recommend you try searching for <i>Iron Man</i> or <i>Pepper Pots</i>.<br>
-        <b> This is where the wikipedia search option comes in </b>
+        <br><center><input class="form-control" id="search" placeholder="Search Wikipedia...">
+     <button class="button2-style" id="searchBtn" type="button" class="btn btn-default"> go</button></center>
+     <div id="searchResults"></div>
         </div>
         <!-- Position 3 End -->
 
@@ -66,7 +72,9 @@
         <b>Review:</b> This is where the NYT API comes in</b>
         <br><br>
         Wanna know more? You can search for the film, comic book series, or character you’re interested in. We recommend you try searching for <i>Whiplash</i> or <i>Happy Hogan</i>.<br>
-        <b> This is where the wikipedia search option comes in </b>
+        <br><center><input class="form-control" id="search" placeholder="Search Wikipedia...">
+     <button class="button2-style" id="searchBtn" type="button" class="btn btn-default"> go</button></center>
+     <div id="searchResults"></div>
         </div>
         <!-- Position 4 End -->
 
@@ -76,7 +84,9 @@
         <b>Review:</b> This is where the NYT API comes in</b>
         <br><br>
         Wanna know more? You can search for the film, comic book series, or character you’re interested in. We recommend you try searching for <i>Thor</i> or <i>Odin</i>.<br>
-        <b> This is where the wikipedia search option comes in </b>
+        <br><center><input class="form-control" id="search" placeholder="Search Wikipedia...">
+     <button class="button2-style" id="searchBtn" type="button" class="btn btn-default"> go</button></center>
+     <div id="searchResults"></div>
         </div>
         <!-- Position 5 End -->
 
@@ -84,4 +94,5 @@
 
   </body>
   <script src="scripts.js"></script>
+    <script src="wikiapi.js"></script>
 </html>
