--- a/phase2.html
+++ b/phase2.html
@@ -35,7 +35,9 @@
           <b>Review:</b> This is where the NYT API comes in</b>
           <br><br>
           Wanna know more? You can search for the film, comic book series, or character you’re interested in. We recommend you try searching for <i>Loki</i> or <i>Phil Coulson</i>.<br>
-          <b> This is where the wikipedia search option comes in </b>
+          <br><center><input class="form-control" id="search" placeholder="Search Wikipedia...">
+       <button class="button2-style" id="searchBtn" type="button" class="btn btn-default"> go</button></center>
+       <div id="searchResults"></div>
         </div>
         <!-- Position 1 End -->
 
@@ -45,7 +47,9 @@
         <b>Review:</b> This is where the NYT API comes in</b>
         <br><br>
         Wanna know more? You can search for the film, comic book series, or character you’re interested in. We recommend you try searching for <i>Aldrich Killian</i> or <i>Pepper Pots</i>.<br>
-        <b> This is where the wikipedia search option comes in </b>
+        <br><center><input class="form-control" id="search" placeholder="Search Wikipedia...">
+     <button class="button2-style" id="searchBtn" type="button" class="btn btn-default"> go</button></center>
+     <div id="searchResults"></div>
         </div>
         <!-- Position 2 End -->
 
@@ -55,7 +59,9 @@
         <b>Review:</b> This is where the NYT API comes in</b>
         <br><br>
         Wanna know more? You can search for the film, comic book series, or character you’re interested in. We recommend you try searching for <i>Loki</i> or <i>Jane Foster</i>.<br>
-        <b> This is where the wikipedia search option comes in </b>
+        <br><center><input class="form-control" id="search" placeholder="Search Wikipedia...">
+     <button class="button2-style" id="searchBtn" type="button" class="btn btn-default"> go</button></center>
+     <div id="searchResults"></div>
         </div>
         <!-- Position 3 End -->
 
@@ -65,7 +71,9 @@
         <b>Review:</b> This is where the NYT API comes in</b>
         <br><br>
         Wanna know more? You can search for the film, comic book series, or character you’re interested in. We recommend you try searching for <i>Bucky Barnes</i> or <i>Steve Rogers</i>.<br>
-        <b> This is where the wikipedia search option comes in </b>
+        <br><center><input class="form-control" id="search" placeholder="Search Wikipedia...">
+     <button class="button2-style" id="searchBtn" type="button" class="btn btn-default"> go</button></center>
+     <div id="searchResults"></div>
         </div>
         <!-- Position 4 End -->
 
@@ -75,7 +83,9 @@
         <b>Review:</b> This is where the NYT API comes in</b>
         <br><br>
         Wanna know more? You can search for the film, comic book series, or character you’re interested in. We recommend you try searching for <i>Star-Lord</i> or <i>Gamora</i>.<br>
-        <b> This is where the wikipedia search option comes in </b>
+        <br><center><input class="form-control" id="search" placeholder="Search Wikipedia...">
+     <button class="button2-style" id="searchBtn" type="button" class="btn btn-default"> go</button></center>
+     <div id="searchResults"></div>
         </div>
         <!-- Position 5 End -->
 
@@ -83,4 +93,5 @@
 
   </body>
   <script src="scripts.js"></script>
+  <script src="wikiapi.js"></script>
 </html>
