a few small changes, mainly stylistic

--- a/phase1.html
+++ b/phase1.html
@@ -24,7 +24,7 @@
 
 
     <div class="main"> <!-- Main Begin -->
-        <b><a href="phase1.html">Phase 1</a> // <a href="phase2.html">Phase 2</a></b>
+        <b><p><a href="phase1.html">Phase 1</a> // <a href="phase2.html">Phase 2</a></p></h2></b>
         <!-- Title Container -->
         <div class="title" id="maintitle">Timeline</div>
         <!-- Sketch Container -->
@@ -36,7 +36,7 @@
           <b>Review:</b> This is where the NYT API comes in</b>
           <br><br>
           Wanna know more? You can search for the film, comic book series, or character you’re interested in. We recommend you try searching for <i>Captain America</i> or <i>Red Skull</i>.<br><br>
-         <center><input class="form-control" id="search" placeholder="Search Wikipedia...">
+         <center><input class="form-control" id="search" placeholder="Explore the MCU...">
 			<button class="button2-style" id="searchBtn" type="button" class="btn btn-default"> go</button></center>
 			<div id="searchResults"></div>
         </div>
@@ -48,7 +48,7 @@
         <b>Review:</b> This is where the NYT API comes in</b>
         <br><br>
         Wanna know more? You can search for the film, comic book series, or character you’re interested in. We recommend you try searching for <i>Captain Marvel</i> or <i>Nick Fury</i>.<br>
-        <br><center><input class="form-control" id="search" placeholder="Search Wikipedia...">
+        <br><center><input class="form-control" id="search" placeholder="Explore the MCU...">
      <button class="button2-style" id="searchBtn" type="button" class="btn btn-default"> go</button></center>
      <div id="searchResults"></div>
         </div>
@@ -60,7 +60,7 @@
         <b>Review:</b> This is where the NYT API comes in</b>
         <br><br>
         Wanna know more? You can search for the film, comic book series, or character you’re interested in. We recommend you try searching for <i>Iron Man</i> or <i>Pepper Pots</i>.<br>
-        <br><center><input class="form-control" id="search" placeholder="Search Wikipedia...">
+        <br><center><input class="form-control" id="search" placeholder="Explore the MCU...">
      <button class="button2-style" id="searchBtn" type="button" class="btn btn-default"> go</button></center>
      <div id="searchResults"></div>
         </div>
@@ -72,7 +72,7 @@
         <b>Review:</b> This is where the NYT API comes in</b>
         <br><br>
         Wanna know more? You can search for the film, comic book series, or character you’re interested in. We recommend you try searching for <i>Whiplash</i> or <i>Happy Hogan</i>.<br>
-        <br><center><input class="form-control" id="search" placeholder="Search Wikipedia...">
+        <br><center><input class="form-control" id="search" placeholder="Explore the MCU...">
      <button class="button2-style" id="searchBtn" type="button" class="btn btn-default"> go</button></center>
      <div id="searchResults"></div>
         </div>
@@ -84,7 +84,7 @@
         <b>Review:</b> This is where the NYT API comes in</b>
         <br><br>
         Wanna know more? You can search for the film, comic book series, or character you’re interested in. We recommend you try searching for <i>Thor</i> or <i>Odin</i>.<br>
-        <br><center><input class="form-control" id="search" placeholder="Search Wikipedia...">
+        <br><center><input class="form-control" id="search" placeholder="Explore the MCU...">
      <button class="button2-style" id="searchBtn" type="button" class="btn btn-default"> go</button></center>
      <div id="searchResults"></div>
         </div>
