--- a/phase2.html
+++ b/phase2.html
@@ -35,7 +35,7 @@
           <b>Review:</b> This is where the NYT API comes in</b>
           <br><br>
           Wanna know more? You can search for the film, comic book series, or character you’re interested in. We recommend you try searching for <i>Loki</i> or <i>Phil Coulson</i>.<br>
-          <br><center><input class="form-control" id="search" placeholder="Search Wikipedia...">
+          <br><center><input class="form-control" id="search" placeholder="Explore the MCU...">
        <button class="button2-style" id="searchBtn" type="button" class="btn btn-default"> go</button></center>
        <div id="searchResults"></div>
         </div>
@@ -47,7 +47,7 @@
         <b>Review:</b> This is where the NYT API comes in</b>
         <br><br>
         Wanna know more? You can search for the film, comic book series, or character you’re interested in. We recommend you try searching for <i>Aldrich Killian</i> or <i>Pepper Pots</i>.<br>
-        <br><center><input class="form-control" id="search" placeholder="Search Wikipedia...">
+        <br><center><input class="form-control" id="search" placeholder="Explore the MCU...">
      <button class="button2-style" id="searchBtn" type="button" class="btn btn-default"> go</button></center>
      <div id="searchResults"></div>
         </div>
@@ -59,7 +59,7 @@
         <b>Review:</b> This is where the NYT API comes in</b>
         <br><br>
         Wanna know more? You can search for the film, comic book series, or character you’re interested in. We recommend you try searching for <i>Loki</i> or <i>Jane Foster</i>.<br>
-        <br><center><input class="form-control" id="search" placeholder="Search Wikipedia...">
+        <br><center><input class="form-control" id="search" placeholder="Explore the MCU...">
      <button class="button2-style" id="searchBtn" type="button" class="btn btn-default"> go</button></center>
      <div id="searchResults"></div>
         </div>
@@ -71,7 +71,7 @@
         <b>Review:</b> This is where the NYT API comes in</b>
         <br><br>
         Wanna know more? You can search for the film, comic book series, or character you’re interested in. We recommend you try searching for <i>Bucky Barnes</i> or <i>Steve Rogers</i>.<br>
-        <br><center><input class="form-control" id="search" placeholder="Search Wikipedia...">
+        <br><center><input class="form-control" id="search" placeholder="Explore the MCU...">
      <button class="button2-style" id="searchBtn" type="button" class="btn btn-default"> go</button></center>
      <div id="searchResults"></div>
         </div>
@@ -83,7 +83,7 @@
         <b>Review:</b> This is where the NYT API comes in</b>
         <br><br>
         Wanna know more? You can search for the film, comic book series, or character you’re interested in. We recommend you try searching for <i>Star-Lord</i> or <i>Gamora</i>.<br>
-        <br><center><input class="form-control" id="search" placeholder="Search Wikipedia...">
+        <br><center><input class="form-control" id="search" placeholder="Explore the MCU...">
      <button class="button2-style" id="searchBtn" type="button" class="btn btn-default"> go</button></center>
      <div id="searchResults"></div>
         </div>
