--- a/phase1.html
+++ b/phase1.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="./addons/style.css"/>
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,400,500,600,700&display=swap" rel="stylesheet">
-    <script src="p5.min.js"></script>
+    <script src="./addons/p5.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="./addons/p5.dom.min.js"></script>
     <script src="./addons/p5.sound.min.js"></script>
@@ -24,11 +24,10 @@
 
 
     <div class="main"> <!-- Main Begin -->
-        <b><a href="phase1.html">Phase 1</a> // <a href="phase2.html">Phase 2</a></b>
         <!-- Title Container -->
         <div class="title" id="maintitle">Timeline</div>
         <!-- Sketch Container -->
-        <div id="sketch-holder">graphic will go here!</div>
+        <div id="sketch-holder"></div>
 
         <!-- Position 1 Start -->
         <div class="text" id="partone"><div class="textbold">Captain America: The First Avenger</div><br><br>
@@ -91,6 +90,11 @@
         <!-- Position 5 End -->
 
     </div> <!-- Main End -->
+
+    <!-- Phase 2 Link -->
+    <div class="phase">
+      <a href="phase2.html">Phase 2</a>
+    </div>
 
   </body>
   <script src="scripts.js"></script>
