changed phase links

--- a/phase2.html
+++ b/phase2.html
@@ -91,6 +91,11 @@
 
     </div> <!-- Main End -->
 
+    <!-- Phase 1 Link -->
+    <div class="phase_left">
+      <a href="phase1.html">Phase 1</a>
+    </div>
+
   </body>
   <script src="scripts.js"></script>
   <script src="wikiapi.js"></script>
