--- a/phase1.html
+++ b/phase1.html
@@ -24,7 +24,6 @@
 
 
     <div class="main"> <!-- Main Begin -->
-        <b><p><a href="phase1.html">Phase 1</a> // <a href="phase2.html">Phase 2</a></p></h2></b>
         <!-- Title Container -->
         <div class="title" id="maintitle">Timeline</div>
         <!-- Sketch Container -->
@@ -93,7 +92,7 @@
     </div> <!-- Main End -->
 
     <!-- Phase 2 Link -->
-    <div class="phase">
+    <div class="phase_right">
       <a href="phase2.html">Phase 2</a>
     </div>
 
