added phase two

--- a/phase1.html
+++ b/phase1.html
@@ -97,6 +97,6 @@
     </div>
 
   </body>
-  <script src="scripts.js"></script>
+  <script src="scripts_1.js"></script>
     <script src="wikiapi.js"></script>
 </html>
