--- a/phase2.html
+++ b/phase2.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="./addons/style.css"/>
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,400,500,600,700&display=swap" rel="stylesheet">
-    <script src="p5.min.js"></script>
+    <script src="./addons/p5.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="./addons/p5.dom.min.js"></script>
     <script src="./addons/p5.sound.min.js"></script>
@@ -23,11 +23,10 @@
 
 
     <div class="main"> <!-- Main Begin -->
-        <a href="phase1.html">Phase 1</a> // <a href="phase2.html">Phase 2</a>
         <!-- Title Container -->
         <div class="title" id="maintitle">Timeline</div>
         <!-- Sketch Container -->
-        <div id="sketch-holder">graphic will go here!</div>
+        <div id="sketch-holder"></div>
 
         <!-- Position 1 Start -->
         <div class="text" id="partone"><div class="textbold">The Avengers</div><br><br>
@@ -97,6 +96,6 @@
     </div>
 
   </body>
-  <script src="scripts.js"></script>
+  <script src="scripts_2.js"></script>
   <script src="wikiapi.js"></script>
 </html>
