--- a/phase1.html
+++ b/phase1.html
@@ -30,21 +30,24 @@
         <div id="sketch-holder"></div>
 
         <!-- Position 1 Start -->
-        <div class="text" id="partone"><div class="textbold">Captain America: The First Avenger</div><br><br>
+        <div class="text" id="partone"><div class="textbold movie" >Captain America: The First Avenger</div><br><br>
           <b>Director:</b> Joe Johnston<br>
-          <b>Review:</b> This is where the NYT API comes in</b>
+          <b>Review:</b>
+          <div id="review0"></div>
           <br><br>
           Wanna know more? You can search for the film, comic book series, or character you’re interested in. We recommend you try searching for <i>Captain America</i> or <i>Red Skull</i>.<br><br>
          <center><input class="form-control" id="search" placeholder="Explore the MCU...">
 			<button class="button2-style" id="searchBtn" type="button" class="btn btn-default"> go</button></center>
 			<div id="searchResults"></div>
+
         </div>
         <!-- Position 1 End -->
 
         <!-- Position 2 Start -->
-        <div class="text" id="parttwo"><div class="textbold">Captain Marvel</div><br><br>
+        <div class="text" id="parttwo"><div class="textbold movie">Captain Marvel</div><br><br>
         <b>Director:</b> Anna Boden & Ryan Fleck<br>
-        <b>Review:</b> This is where the NYT API comes in</b>
+        <b>Review:</b>
+        <div id="review1"></div>
         <br><br>
         Wanna know more? You can search for the film, comic book series, or character you’re interested in. We recommend you try searching for <i>Captain Marvel</i> or <i>Nick Fury</i>.<br>
         <br><center><input class="form-control" id="search" placeholder="Explore the MCU...">
@@ -54,9 +57,10 @@
         <!-- Position 2 End -->
 
         <!-- Position 3 Start -->
-        <div class="text" id="partthree"><div class="textbold">Iron Man</div><br><br>
+        <div class="text" id="partthree"><div class="textbold movie">Iron Man</div><br><br>
         <b>Director:</b> Jon Favreau<br>
-        <b>Review:</b> This is where the NYT API comes in</b>
+        <b>Review:</b>
+         <div id="review2"></div>
         <br><br>
         Wanna know more? You can search for the film, comic book series, or character you’re interested in. We recommend you try searching for <i>Iron Man</i> or <i>Pepper Pots</i>.<br>
         <br><center><input class="form-control" id="search" placeholder="Explore the MCU...">
@@ -66,9 +70,10 @@
         <!-- Position 3 End -->
 
         <!-- Position 4 Start -->
-        <div class="text" id="partfour"><div class="textbold">Iron Man 2</div><br><br>
+        <div class="text" id="partfour"><div class="textbold movie">Iron Man 2</div><br><br>
         <b>Director:</b> Jon Favreau<br>
-        <b>Review:</b> This is where the NYT API comes in</b>
+        <b>Review:</b>
+         <div id="review3"></div>
         <br><br>
         Wanna know more? You can search for the film, comic book series, or character you’re interested in. We recommend you try searching for <i>Whiplash</i> or <i>Happy Hogan</i>.<br>
         <br><center><input class="form-control" id="search" placeholder="Explore the MCU...">
@@ -78,9 +83,10 @@
         <!-- Position 4 End -->
 
         <!-- Position 5 Start -->
-        <div class="text" id="partfive"><div class="textbold">Thor</div><br><br>
+        <div class="text" id="partfive"><div class="textbold movie">Thor</div><br><br>
         <b>Director:</b> Kenneth Branagh<br>
-        <b>Review:</b> This is where the NYT API comes in</b>
+        <b>Review:</b>
+         <div id="review4"></div>
         <br><br>
         Wanna know more? You can search for the film, comic book series, or character you’re interested in. We recommend you try searching for <i>Thor</i> or <i>Odin</i>.<br>
         <br><center><input class="form-control" id="search" placeholder="Explore the MCU...">
@@ -99,4 +105,5 @@
   </body>
   <script src="scripts_1.js"></script>
     <script src="wikiapi.js"></script>
+    <script src="nytapi.js"></script>
 </html>
