--- a/phase2.html
+++ b/phase2.html
@@ -29,9 +29,10 @@
         <div id="sketch-holder"></div>
 
         <!-- Position 1 Start -->
-        <div class="text" id="partone"><div class="textbold">The Avengers</div><br><br>
+        <div class="text" id="partone"><div class="textbold movie">The Avengers</div><br><br>
           <b>Director:</b> Joss Whedon<br>
-          <b>Review:</b> This is where the NYT API comes in</b>
+          <b>Review:</b>
+           <div id="review0"></div>
           <br><br>
           Wanna know more? You can search for the film, comic book series, or character you’re interested in. We recommend you try searching for <i>Loki</i> or <i>Phil Coulson</i>.<br>
           <br><center><input class="form-control" id="search" placeholder="Explore the MCU...">
@@ -41,9 +42,10 @@
         <!-- Position 1 End -->
 
         <!-- Position 2 Start -->
-        <div class="text" id="parttwo"><div class="textbold">Iron Man 3</div><br><br>
+        <div class="text" id="parttwo"><div class="textbold movie">Iron Man 3</div><br><br>
         <b>Director:</b> Shane Black<br>
-        <b>Review:</b> This is where the NYT API comes in</b>
+        <b>Review:</b>
+         <div id="review1"></div>
         <br><br>
         Wanna know more? You can search for the film, comic book series, or character you’re interested in. We recommend you try searching for <i>Aldrich Killian</i> or <i>Pepper Pots</i>.<br>
         <br><center><input class="form-control" id="search" placeholder="Explore the MCU...">
@@ -53,9 +55,10 @@
         <!-- Position 2 End -->
 
         <!-- Position 3 Start -->
-        <div class="text" id="partthree"><div class="textbold">Thor: The Dark World</div><br><br>
+        <div class="text" id="partthree"><div class="textbold movie">Thor: The Dark World</div><br><br>
         <b>Director:</b> Alan Taylor<br>
-        <b>Review:</b> This is where the NYT API comes in</b>
+        <b>Review:</b>
+        <div id="review2"></div>
         <br><br>
         Wanna know more? You can search for the film, comic book series, or character you’re interested in. We recommend you try searching for <i>Loki</i> or <i>Jane Foster</i>.<br>
         <br><center><input class="form-control" id="search" placeholder="Explore the MCU...">
@@ -65,9 +68,10 @@
         <!-- Position 3 End -->
 
         <!-- Position 4 Start -->
-        <div class="text" id="partfour"><div class="textbold">Captain America: The Winter Soldier</div><br><br>
+        <div class="text" id="partfour"><div class="textbold movie">Captain America: The Winter Soldier</div><br><br>
         <b>Director:</b> Anthony & Joe Russo<br>
-        <b>Review:</b> This is where the NYT API comes in</b>
+        <b>Review:</b>
+         <div id="review3"></div>
         <br><br>
         Wanna know more? You can search for the film, comic book series, or character you’re interested in. We recommend you try searching for <i>Bucky Barnes</i> or <i>Steve Rogers</i>.<br>
         <br><center><input class="form-control" id="search" placeholder="Explore the MCU...">
@@ -77,9 +81,10 @@
         <!-- Position 4 End -->
 
         <!-- Position 5 Start -->
-        <div class="text" id="partfive"><div class="textbold">Guardians of the Galaxy Vol. 1</div><br><br>
+        <div class="text" id="partfive"><div class="textbold movie">Guardians of the Galaxy</div><br><br>
         <b>Director:</b> James Gunn<br>
-        <b>Review:</b> This is where the NYT API comes in</b>
+        <b>Review:</b>
+         <div id="review4"></div>
         <br><br>
         Wanna know more? You can search for the film, comic book series, or character you’re interested in. We recommend you try searching for <i>Star-Lord</i> or <i>Gamora</i>.<br>
         <br><center><input class="form-control" id="search" placeholder="Explore the MCU...">
@@ -98,4 +103,5 @@
   </body>
   <script src="scripts_2.js"></script>
   <script src="wikiapi.js"></script>
+   <script src="nytapi.js"></script>
 </html>
