--- a/phase1.html
+++ b/phase1.html
@@ -17,7 +17,7 @@
   <body>
     <div class="introduction"> <!-- Pre-Main Begin -->
         <div class="title">Explore The Marvel Universe!</div>
-        <div class="text"><i><b>Navigate a timeline of films in the MCU through NYT movie critic reviews and Wikipedia searches of your favorite characters</i></b><br><br> The purpose of this project is to:<br><br>(a) Visualize the timeline of MCU films (chronologically in the order of movie events and not release dates)<br><br>(b) Do that in a dyanimic and interactive manner<br><br>(c) Provide viewers unfamiliar with the MCU with a way to understand the significance and cultural and cinematic impact of these films through a framework familiar to moviegoers — movie critic reviews<br><br>(d) Allow them the space to further explore films of interest on the same platform through a Wikipedia search option</div>
+        <div class="text"><i><b>Navigate a timeline of films in the MCU through NYT movie critic reviews and Wikipedia searches of your favorite characters</i></b><br><br> The purpose of this project is to:<br><br>(a) Visualize the timeline of MCU films (chronologically in the order of movie events and not release dates)<br><br>(b) Do that in a dynamic and interactive manner<br><br>(c) Provide viewers unfamiliar with the MCU with a way to understand the significance and cultural and cinematic impact of these films through a framework familiar to moviegoers — movie critic reviews<br><br>(d) Allow them the space to further explore films of interest on the same platform through a Wikipedia search option</div>
         <!-- Begin Button -->
         <br><center><button class="button-style" id="start" style="font-family: 'Raleway', sans-serif;">Enter</button></center>
     </div> <!-- Pre-Main End -->
