--- a/phase2.html
+++ b/phase2.html
@@ -32,8 +32,7 @@
         <div class="text" id="partone"><div class="textbold movie">The Avengers</div><br><br>
           <b>Director:</b> Joss Whedon<br>
           <b>Review:</b>
-           <div id="review0"></div>
-          <br><br>
+          <div id="review0"></div>
           Wanna know more? You can search for the film, comic book series, or character you’re interested in. We recommend you try searching for <i>Loki</i> or <i>Phil Coulson</i> at the end of your journey.<br>
         </div>
         <!-- Position 1 End -->
@@ -42,8 +41,7 @@
         <div class="text" id="parttwo"><div class="textbold movie">Iron Man 3</div><br><br>
         <b>Director:</b> Shane Black<br>
         <b>Review:</b>
-         <div id="review1"></div>
-        <br><br>
+        <div id="review1"></div>
         Wanna know more? You can search for the film, comic book series, or character you’re interested in. We recommend you try searching for <i>Aldrich Killian</i> or <i>Pepper Pots</i> at the end of your journey.<br>
         </div>
         <!-- Position 2 End -->
@@ -53,7 +51,6 @@
         <b>Director:</b> Alan Taylor<br>
         <b>Review:</b>
         <div id="review2"></div>
-        <br><br>
         Wanna know more? You can search for the film, comic book series, or character you’re interested in. We recommend you try searching for <i>Loki</i> or <i>Jane Foster</i> at the end of your journey.<br>
         </div>
         <!-- Position 3 End -->
@@ -63,7 +60,6 @@
         <b>Director:</b> Anthony & Joe Russo<br>
         <b>Review:</b>
          <div id="review3"></div>
-        <br><br>
         Wanna know more? You can search for the film, comic book series, or character you’re interested in. We recommend you try searching for <i>Bucky Barnes</i> or <i>Steve Rogers</i> at the end of your journey.<br>
         </div>
         <!-- Position 4 End -->
@@ -72,10 +68,9 @@
         <div class="text" id="partfive"><div class="textbold movie">Guardians of the Galaxy</div><br><br>
         <b>Director:</b> James Gunn<br>
         <b>Review:</b>
-         <div id="review4"></div>
-        <br><br>
+        <div id="review4"></div>
         Wanna know more? You can search for the film, comic book series, or character you’re interested in. We recommend you try searching for <i>Star-Lord</i> or <i>Gamora</i>.<br><br>
-        <center><div class="text"><div class="textbold">Look up some of the MCU characters you've read about to know more!</div><br></center>
+        <center><div class="text"><div class="textbold">Now look up some of the MCU characters you've read about to know more!</div><br></center>
         <br><center><input class="form-control" id="search" placeholder="Explore the MCU...">
      <button class="button2-style" id="searchBtn" type="button" class="btn btn-default"> go</button></center>
      <div id="searchResults"></div>
